Restructure the README as a first-run walkthrough